# Smiley

./: .gitignore  README.md  package-lock.json  package.json
backend/: py13-requirements.txt  pyproject.toml  requirements.txt
backend/apps/camp/: models.py  serializers.py  urls.py  views.py
backend/apps/camp/migrations/: 0001_initial.py
backend/apps/housing/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/housing/migrations/: 0001_initial.py
backend/apps/person/: models.py  serializers.py  urls.py  views.py
backend/apps/person/migrations/: 0001_initial.py  0002_person_gender_person_phone_number_person_ypt_class_and_more.py
backend/apps/program/: models.py  serializers.py  urls.py  views.py
backend/apps/program/migrations/: 0001_initial.py
backend/apps/users/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend-cra/: package-lock.json  package.json
frontend-cra/src/: App.tsx
frontend-cra/src/modules/admin/: Admin.tsx
frontend-cra/src/routes/: AppRoutes.tsx
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/programs/: page.tsx
frontend/src/components/: layout.tsx  sidebar.tsx
frontend/src/models/: program.ts
frontend/src/modules/dashboard/: Dashboard.tsx
frontend/src/routes/: AppRoutes.tsx
scripts/: open-backend.js
