[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.7.9",
    "charset-normalizer==3.3.2",
    "distlib==0.3.8",
    "django==5.1.6",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.15.2",
    "djangorestframework-camel-case==1.4.2",
    "djangorestframework-simplejwt==5.5.0",
    "drf-yasg==1.21.10",
    "filelock==3.13.1",
    "fsspec==2023.12.1",
    "idna==3.6",
    "inflection==0.5.1",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==2.3.1",
    "packaging==25.0",
    "pillow==11.3.0",
    "pipenv==2024.0.0",
    "platformdirs==4.2.2",
    "psycopg==3.2.9",
    "pyjwt==2.9.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.31.0",
    "setuptools==80.9.0",
    "sqlparse==0.5.3",
    "sympy==1.14.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "typing-extensions==4.14.1",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "virtualenv==20.31.2",
]
